[gd_scene load_steps=23 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://src/Scenes/Level 5/States/BeamAttack.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/Level 5/States/ChoosingAttack.gd" type="Script" id=3]
[ext_resource path="res://src/Scenes/Level 5/Boss 1.gd" type="Script" id=4]
[ext_resource path="res://src/Nodes/Platforms/OneWay/OneWayPlatformThin.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Nodes/Player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Nodes/Boss/Moon/Moon.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Scenes/Level 5/States/TentacleAttack.gd" type="Script" id=8]
[ext_resource path="res://src/Scenes/Level 5/States/Yapping.gd" type="Script" id=9]
[ext_resource path="res://src/Scenes/Level 5/States/Moving.gd" type="Script" id=10]
[ext_resource path="res://src/Nodes/StateMachine/StateMachine.gd" type="Script" id=11]
[ext_resource path="res://src/Tileset/tileset.tres" type="TileSet" id=12]
[ext_resource path="res://Assets/Audio/Music/moonboss/moonboss_mid_loop.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Audio/Music/moonboss/moonboss_intro.wav" type="AudioStream" id=14]
[ext_resource path="res://src/Scenes/Level 5/States/Dialogue.gd" type="Script" id=15]
[ext_resource path="res://src/Scenes/Level 5/finalscene1.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 1080 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 32, 1080 )

[sub_resource type="Curve2D" id=14]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 448, 0, 0, 0, 0, 256, 656 )
}

[sub_resource type="Curve2D" id=15]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 150, 448, 0, 0, 0, 0, 150, 656 )
}

[sub_resource type="Curve2D" id=16]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 448, 0, 0, 0, 0, 1636, 448 )
}

[sub_resource type="Curve2D" id=17]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 656, 0, 0, 0, 0, 1636, 656 )
}

[node name="Boss 1" type="Node2D"]
script = ExtResource( 4 )
unlocks = 69
id = 5
best_time = 67.0
music = ExtResource( 13 )
moonboss_intro = ExtResource( 14 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 11 )
initial_state = NodePath("Dialogue")

[node name="ChoosingAttack" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="YappingAttack" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="TentacleAttack" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="StateMachine/TentacleAttack"]

[node name="BeamAttack" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Dialogue" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="LevelBarrier" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBarrier"]
position = Vector2( -32, 10 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LevelBarrier"]
position = Vector2( 1888, 8 )
shape = SubResource( 13 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
cell_y_sort = true
show_collision = true
centered_textures = true
collision_layer = 16
collision_mask = 0
format = 1
tile_data = PoolIntArray( 917504, 3, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 983040, 3, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 3, 0 )

[node name="Platforms" type="Node2D" parent="."]

[node name="Row" type="Node2D" parent="Platforms"]

[node name="OneWayPlatformThin" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 128, 688 )

[node name="OneWayPlatformThin2" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 384, 688 )

[node name="OneWayPlatformThin3" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 640, 688 )

[node name="OneWayPlatformThin4" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 896, 688 )

[node name="OneWayPlatformThin7" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 1152, 688 )

[node name="OneWayPlatformThin9" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 1408, 688 )

[node name="OneWayPlatformThin8" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 1792, 688 )

[node name="OneWayPlatformThin10" parent="Platforms/Row" instance=ExtResource( 5 )]
position = Vector2( 1664, 688 )

[node name="Row3" type="Node2D" parent="Platforms"]
position = Vector2( 0, -224 )

[node name="OneWayPlatformThin" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 128, 688 )

[node name="OneWayPlatformThin2" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 384, 688 )

[node name="OneWayPlatformThin3" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 640, 688 )

[node name="OneWayPlatformThin4" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 896, 688 )

[node name="OneWayPlatformThin7" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 1152, 688 )

[node name="OneWayPlatformThin9" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 1408, 688 )

[node name="OneWayPlatformThin8" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 1792, 688 )

[node name="OneWayPlatformThin10" parent="Platforms/Row3" instance=ExtResource( 5 )]
position = Vector2( 1664, 688 )

[node name="Coins" type="Node2D" parent="."]

[node name="TentaclePositions" type="Node2D" parent="."]

[node name="HorizontalLeft" type="Node2D" parent="TentaclePositions"]

[node name="RayCast2D" type="RayCast2D" parent="TentaclePositions/HorizontalLeft"]
position = Vector2( 0, 576 )
cast_to = Vector2( 50, 0 )
collision_mask = 0

[node name="RayCast2D2" type="RayCast2D" parent="TentaclePositions/HorizontalLeft"]
position = Vector2( 0, 800 )
cast_to = Vector2( 50, 0 )
collision_mask = 0

[node name="RayCast2D3" type="RayCast2D" parent="TentaclePositions/HorizontalLeft"]
position = Vector2( 0, 352 )
cast_to = Vector2( 50, 0 )
collision_mask = 0

[node name="HorizontalRight" type="Node2D" parent="TentaclePositions"]

[node name="RayCast2D" type="RayCast2D" parent="TentaclePositions/HorizontalRight"]
position = Vector2( 1920, 576 )
cast_to = Vector2( -50, 0 )
collision_mask = 0

[node name="RayCast2D2" type="RayCast2D" parent="TentaclePositions/HorizontalRight"]
position = Vector2( 1920, 800 )
cast_to = Vector2( -50, 0 )
collision_mask = 0

[node name="RayCast2D3" type="RayCast2D" parent="TentaclePositions/HorizontalRight"]
position = Vector2( 1920, 352 )
cast_to = Vector2( -50, 0 )
collision_mask = 0

[node name="Vertical" type="Node2D" parent="TentaclePositions"]

[node name="RayCast2D17" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 448, 0 )
collision_mask = 0

[node name="RayCast2D18" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 128, 0 )
collision_mask = 0

[node name="RayCast2D19" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 768, 0 )
collision_mask = 0

[node name="RayCast2D20" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 1088, 0 )
collision_mask = 0

[node name="RayCast2D21" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 1408, 0 )
collision_mask = 0

[node name="RayCast2D22" type="RayCast2D" parent="TentaclePositions/Vertical"]
position = Vector2( 1728, 0 )
collision_mask = 0

[node name="Vertical2" type="Node2D" parent="TentaclePositions"]

[node name="RayCast2D17" type="RayCast2D" parent="TentaclePositions/Vertical2"]
position = Vector2( 608, 0 )
collision_mask = 0

[node name="RayCast2D18" type="RayCast2D" parent="TentaclePositions/Vertical2"]
position = Vector2( 288, 0 )
collision_mask = 0

[node name="RayCast2D19" type="RayCast2D" parent="TentaclePositions/Vertical2"]
position = Vector2( 928, 0 )
collision_mask = 0

[node name="RayCast2D20" type="RayCast2D" parent="TentaclePositions/Vertical2"]
position = Vector2( 1248, 0 )
collision_mask = 0

[node name="RayCast2D21" type="RayCast2D" parent="TentaclePositions/Vertical2"]
position = Vector2( 1568, 0 )
collision_mask = 0

[node name="Paths" type="Node2D" parent="."]

[node name="TopBottomLeftSidePath" type="Path2D" parent="Paths"]
position = Vector2( 14, 0 )
curve = SubResource( 14 )

[node name="TopBottomRightSidePath" type="Path2D" parent="Paths"]
position = Vector2( 1500, 0 )
curve = SubResource( 15 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/TopBottomRightSidePath"]
position = Vector2( 150, 448 )
rotate = false
cubic_interp = false
loop = false

[node name="Moon" parent="Paths/TopBottomRightSidePath/PathFollow2D" instance=ExtResource( 7 )]

[node name="TopHorizontalPath" type="Path2D" parent="Paths"]
position = Vector2( 14, 0 )
curve = SubResource( 16 )

[node name="BottomHorizontalPath" type="Path2D" parent="Paths"]
position = Vector2( 14, 0 )
curve = SubResource( 17 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 82, 892 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, -27 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.05
drag_margin_right = 0.05
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Bullets" type="Node" parent="."]

[node name="TopLeftCorner" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 1920.0
}
